JFX migration